# medical-reasoning-llm

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
config/: eval_config.yaml  model_config.yaml  training_config.yaml
docs/: notebook_execution_guide.md  training_guide.md
notebooks/: 01_data_exploration.ipynb  02_training_colab.ipynb  03_evaluation.ipynb
results/: sample_generations.txt
scripts/: evaluate.py  infer.py  train.py
src/medical_reasoning/: __init__.py
src/medical_reasoning/data/: __Init__.py  dataset.py  preprocessor.py  utils.py
src/medical_reasoning/evaluation/: __init__.py  evaluator.py  metrics.py
src/medical_reasoning/inference/: __init__.py  pipeline.py
src/medical_reasoning/models/: __init__.py  base.py  qlora.py
src/medical_reasoning/training/: __init__.py  callbacks.py  trainer.py
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: test_data.py  test_evaluation.py
