[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medical-reasoning-llm"
version = "0.1.0"
description = "QLoRA fine-tuning of Qwen2.5-3B for clinical chain-of-thought reasoning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "medical-ai",
    "llm",
    "qlora",
    "chain-of-thought",
    "clinical-reasoning",
    "fine-tuning",
    "qwen",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.43.0",
    "tokenizers>=0.19.0",
    "accelerate>=0.30.0",
    "datasets>=2.19.0",
    "peft>=0.11.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
    "rouge-score>=0.1.2",
    "evaluate>=0.4.2",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "safetensors>=0.4.3",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandas>=2.2.0",
]
tracking = [
    "wandb>=0.17.0",
]

[project.scripts]
medreason-train   = "scripts.train:main"
medreason-eval    = "scripts.evaluate:main"
medreason-infer   = "scripts.infer:main"

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/medical-reasoning-llm"
Repository = "https://github.com/YOUR_USERNAME/medical-reasoning-llm"
Issues     = "https://github.com/YOUR_USERNAME/medical-reasoning-llm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ── Black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length    = 100
target-version = ["py310", "py311"]

# ── Ruff ───────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

# ── MyPy ───────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.10"
warn_return_any        = true
warn_unused_configs    = true
ignore_missing_imports = true

# ── Pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths      = ["tests"]
addopts        = "-v --tb=short --cov=src --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]